[gd_scene load_steps=43 format=3 uid="uid://dkb3s58dnfp3v"]

[ext_resource type="Script" path="res://scripts/gameFolder/game_top.gd" id="1_hchh8"]
[ext_resource type="Script" path="res://scripts/gameFolder/game_player.gd" id="2_8ueva"]
[ext_resource type="Texture2D" uid="uid://dr1r7f0eqyfec" path="res://assets/tankBird/TankBirdBod (1).png" id="3_yt7t5"]
[ext_resource type="PackedScene" uid="uid://dukd2mn150ti1" path="res://scenes/mutation_part.tscn" id="4_2bgl1"]
[ext_resource type="Script" path="res://scripts/gameFolder/GameBulletHandler.gd" id="5_t80kh"]
[ext_resource type="Script" path="res://scripts/AreaBulletCollection.gd" id="6_e74tl"]
[ext_resource type="Shader" path="res://shaders/level_oneback.gdshader" id="7_2j47l"]
[ext_resource type="Script" path="res://scripts/gameFolder/GameWaves.gd" id="9_cwbsc"]
[ext_resource type="Texture2D" uid="uid://du2hhb0k4p8hp" path="res://assets/Dark Star Particle.png" id="10_7t3f4"]
[ext_resource type="Script" path="res://scripts/gameFolder/top_game_over.gd" id="11_qudnx"]
[ext_resource type="Texture2D" uid="uid://dxrc2v8dcxrx5" path="res://assets/Star Particle (1).png" id="11_x60jw"]
[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="12_1ef7u"]
[ext_resource type="Texture2D" uid="uid://chgi1ni3h7lpy" path="res://assets/Star Particle.png" id="12_m0jp0"]
[ext_resource type="PackedScene" uid="uid://co2681xf6dre" path="res://scenes/pause_menu.tscn" id="13_3wdue"]
[ext_resource type="AudioStream" uid="uid://dohitiswygj2q" path="res://assets/orb.mp3" id="13_8wiul"]
[ext_resource type="Script" path="res://scripts/ScoreS1.gd" id="14_6ye3i"]
[ext_resource type="Script" path="res://scripts/SFXVolScript.gd" id="14_nv7fv"]
[ext_resource type="Texture2D" uid="uid://128dlw2ygthe" path="res://assets/HealthBarRedCenter.png" id="14_rfjs2"]
[ext_resource type="Script" path="res://scripts/gameFolder/top_health_bar.gd" id="15_1r5es"]
[ext_resource type="AudioStream" uid="uid://vn2lp82aubml" path="res://assets/new-level-142995.mp3" id="15_gejrj"]
[ext_resource type="Script" path="res://scripts/gameFolder/gameHighscore.gd" id="15_nmvl1"]
[ext_resource type="PackedScene" uid="uid://ywkm5lhkpww" path="res://scenes/health_bar_red.tscn" id="15_tvgir"]
[ext_resource type="AudioStream" uid="uid://cn63cw3kspful" path="res://assets/ding-1-14705.mp3" id="16_0nk63"]
[ext_resource type="AudioStream" uid="uid://bju8qwut2ca08" path="res://assets/popSFX/happy-pop-3-185288.mp3" id="16_j4gmb"]
[ext_resource type="Script" path="res://scripts/gameFolder/Game_Camera2D.gd" id="18_chv7v"]
[ext_resource type="Script" path="res://scripts/gameFolder/Crasher.gd" id="19_6jffq"]
[ext_resource type="Shader" path="res://shaders/crashOutline.gdshader" id="20_16gop"]
[ext_resource type="Texture2D" uid="uid://pgt6n3ajivpu" path="res://assets/radial background big.png" id="20_rltlv"]
[ext_resource type="Texture2D" uid="uid://dy7qrl58soocx" path="res://assets/Crasher3.png" id="20_slatg"]
[ext_resource type="Texture2D" uid="uid://bmr3mfd1wge0a" path="res://assets/CrasherOutline3.png" id="21_wb7rs"]
[ext_resource type="Script" path="res://scripts/gameFolder/CrasherOutline.gd" id="22_i2wgh"]
[ext_resource type="Shader" path="res://shaders/crashBoostBar.gdshader" id="26_te00n"]
[ext_resource type="Script" path="res://scripts/gameFolder/CrashBoost.gd" id="27_b45ey"]

[sub_resource type="CircleShape2D" id="CircleShape2D_j54jy"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_ph3oq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6nxat"]
shader = ExtResource("7_2j47l")
shader_parameter/speedScale = 2.0

[sub_resource type="Curve" id="Curve_bc56w"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -3.56279, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_p1bkv"]
min_value = -360.0
max_value = 360.0
_data = [Vector2(0, 2), 0.0, 0.0, 0, 0, Vector2(1, -2), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_qkfoy"]
_data = [Vector2(0, 0), 0.0, 4.67277, 0, 0, Vector2(0.101124, 1), 1.63004, 1.63004, 0, 0, Vector2(1, 0), -1.65511, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_y4ple"]
offsets = PackedFloat32Array(0, 0.48, 1)
colors = PackedColorArray(1, 1, 1, 1, 0.48, 0.48, 0.48, 1, 0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ih00v"]
shader = ExtResource("20_16gop")
shader_parameter/crash_progress = 6.3
shader_parameter/radius = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4yd7u"]
shader = ExtResource("26_te00n")
shader_parameter/boost_value = 3.113
shader_parameter/gaining_boost = false

[node name="game" type="Node2D"]
scale = Vector2(1.218, 1.218)
script = ExtResource("1_hchh8")

[node name="Player" type="Area2D" parent="." groups=["Player"]]
script = ExtResource("2_8ueva")

[node name="TankBirdBod(1)" type="Sprite2D" parent="Player"]
z_index = 3
texture = ExtResource("3_yt7t5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
visible = false
z_index = 4
scale = Vector2(23.58, 23.2821)
shape = SubResource("CircleShape2D_j54jy")

[node name="mutationPart" parent="Player" instance=ExtResource("4_2bgl1")]

[node name="GameBulletHandler" type="Node" parent="."]
script = ExtResource("5_t80kh")

[node name="AutoTimer" type="Timer" parent="GameBulletHandler"]
wait_time = 0.2

[node name="AreaBulletCollection" type="Area2D" parent="."]
script = ExtResource("6_e74tl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaBulletCollection"]
position = Vector2(0, 3000)
shape = SubResource("WorldBoundaryShape2D_ph3oq")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AreaBulletCollection"]
position = Vector2(-5000, 0)
rotation = 1.5708
shape = SubResource("WorldBoundaryShape2D_ph3oq")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="AreaBulletCollection"]
position = Vector2(5000, 0)
rotation = -1.5708
shape = SubResource("WorldBoundaryShape2D_ph3oq")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="AreaBulletCollection"]
position = Vector2(0, -3000)
rotation = 3.14159
shape = SubResource("WorldBoundaryShape2D_ph3oq")

[node name="SplatchoStage1Background(3)" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_6nxat")
position = Vector2(0, 1.90735e-06)
scale = Vector2(603.038, 603.038)

[node name="GameWaves" type="Node" parent="."]
script = ExtResource("9_cwbsc")

[node name="GameOver" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("11_qudnx")

[node name="ColorRect" type="ColorRect" parent="GameOver"]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.411765, 0.423529, 0.686275, 0.270588)
metadata/_edit_use_anchors_ = true

[node name="OverWords" type="Label" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 126
text = "
Game Over"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="RetryButton" type="Button" parent="GameOver"]
anchors_preset = -1
anchor_left = 0.0286458
anchor_top = 0.00462963
anchor_right = 0.971354
anchor_bottom = 0.99537
offset_left = 686.0
offset_top = 418.0
offset_right = -686.0
offset_bottom = -492.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 70
text = "RETRY"
metadata/_edit_use_anchors_ = true

[node name="StageButton" type="Button" parent="GameOver"]
anchors_preset = -1
anchor_left = -0.00625
anchor_top = -0.00648148
anchor_right = 1.00625
anchor_bottom = 1.00648
offset_left = 686.0
offset_top = 632.0
offset_right = -686.0
offset_bottom = -296.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 70
text = "STAGE SELECT"
metadata/_edit_use_anchors_ = true

[node name="StarOutlines" type="Node2D" parent="GameOver"]
position = Vector2(-21, -10)

[node name="DarkStarParticle1" type="Sprite2D" parent="GameOver/StarOutlines"]
position = Vector2(230, 960)
rotation = -0.261799
scale = Vector2(0.2875, 0.2875)
texture = ExtResource("10_7t3f4")

[node name="DarkStarParticle2" type="Sprite2D" parent="GameOver/StarOutlines"]
position = Vector2(480, 950)
rotation = -0.174533
scale = Vector2(0.2875, 0.2875)
texture = ExtResource("10_7t3f4")

[node name="DarkStarParticle3" type="Sprite2D" parent="GameOver/StarOutlines"]
position = Vector2(730, 945)
rotation = -0.0872665
scale = Vector2(0.2875, 0.2875)
texture = ExtResource("10_7t3f4")

[node name="DarkStarParticle4" type="Sprite2D" parent="GameOver/StarOutlines"]
position = Vector2(980, 940)
scale = Vector2(0.2875, 0.2875)
texture = ExtResource("10_7t3f4")

[node name="DarkStarParticle5" type="Sprite2D" parent="GameOver/StarOutlines"]
position = Vector2(1230, 945)
rotation = 0.0872665
scale = Vector2(0.2875, 0.2875)
texture = ExtResource("10_7t3f4")

[node name="DarkStarParticle6" type="Sprite2D" parent="GameOver/StarOutlines"]
position = Vector2(1480, 950)
rotation = 0.174533
scale = Vector2(0.2875, 0.2875)
texture = ExtResource("10_7t3f4")

[node name="DarkStarParticle7" type="Sprite2D" parent="GameOver/StarOutlines"]
position = Vector2(1730, 960)
rotation = 0.261799
scale = Vector2(0.2875, 0.2875)
texture = ExtResource("10_7t3f4")

[node name="StarCompletes" type="Node2D" parent="GameOver"]
position = Vector2(-21, -10)

[node name="DarkStarParticle1" type="Sprite2D" parent="GameOver/StarCompletes"]
visible = false
position = Vector2(230, 960)
rotation = -0.261799
scale = Vector2(0.2, 0.2)
texture = ExtResource("11_x60jw")

[node name="StarCPUParticles1" type="CPUParticles2D" parent="GameOver/StarCompletes/DarkStarParticle1"]
position = Vector2(12.5013, 49.9372)
emitting = false
amount = 15
one_shot = true
explosiveness = 1.0
texture = ExtResource("11_x60jw")
emission_shape = 3
emission_rect_extents = Vector2(50, 20)
direction = Vector2(0, -1)
spread = 90.0
initial_velocity_min = 2000.0
initial_velocity_max = 5000.0
angular_velocity_min = -500.0
angular_velocity_max = 500.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 0.05
scale_amount_max = 0.1
scale_amount_curve = SubResource("Curve_bc56w")

[node name="DarkStarParticle2" type="Sprite2D" parent="GameOver/StarCompletes"]
visible = false
position = Vector2(480, 950)
rotation = -0.174533
scale = Vector2(0.2, 0.2)
texture = ExtResource("11_x60jw")

[node name="StarCPUParticles2" type="CPUParticles2D" parent="GameOver/StarCompletes/DarkStarParticle2"]
position = Vector2(12.5013, 49.9372)
emitting = false
amount = 15
one_shot = true
explosiveness = 1.0
texture = ExtResource("11_x60jw")
emission_shape = 3
emission_rect_extents = Vector2(50, 20)
direction = Vector2(0, -1)
spread = 90.0
initial_velocity_min = 2000.0
initial_velocity_max = 5000.0
angular_velocity_min = -500.0
angular_velocity_max = 500.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 0.05
scale_amount_max = 0.1
scale_amount_curve = SubResource("Curve_bc56w")

[node name="DarkStarParticle3" type="Sprite2D" parent="GameOver/StarCompletes"]
visible = false
position = Vector2(730, 945)
rotation = -0.0872665
scale = Vector2(0.2, 0.2)
texture = ExtResource("11_x60jw")

[node name="StarCPUParticles3" type="CPUParticles2D" parent="GameOver/StarCompletes/DarkStarParticle3"]
position = Vector2(12.5013, 49.9372)
emitting = false
amount = 15
one_shot = true
explosiveness = 1.0
texture = ExtResource("11_x60jw")
emission_shape = 3
emission_rect_extents = Vector2(50, 20)
direction = Vector2(0, -1)
spread = 90.0
initial_velocity_min = 2000.0
initial_velocity_max = 5000.0
angular_velocity_min = -500.0
angular_velocity_max = 500.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 0.05
scale_amount_max = 0.1
scale_amount_curve = SubResource("Curve_bc56w")

[node name="DarkStarParticle4" type="Sprite2D" parent="GameOver/StarCompletes"]
visible = false
position = Vector2(980, 940)
scale = Vector2(0.2, 0.2)
texture = ExtResource("11_x60jw")

[node name="StarCPUParticles4" type="CPUParticles2D" parent="GameOver/StarCompletes/DarkStarParticle4"]
position = Vector2(12.5013, 49.9372)
emitting = false
amount = 15
one_shot = true
explosiveness = 1.0
texture = ExtResource("11_x60jw")
emission_shape = 3
emission_rect_extents = Vector2(50, 20)
direction = Vector2(0, -1)
spread = 90.0
initial_velocity_min = 2000.0
initial_velocity_max = 5000.0
angular_velocity_min = -500.0
angular_velocity_max = 500.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 0.05
scale_amount_max = 0.1
scale_amount_curve = SubResource("Curve_bc56w")

[node name="DarkStarParticle5" type="Sprite2D" parent="GameOver/StarCompletes"]
visible = false
position = Vector2(1230, 945)
rotation = 0.0872665
scale = Vector2(0.2, 0.2)
texture = ExtResource("11_x60jw")

[node name="StarCPUParticles5" type="CPUParticles2D" parent="GameOver/StarCompletes/DarkStarParticle5"]
position = Vector2(12.5013, 49.9372)
emitting = false
amount = 15
one_shot = true
explosiveness = 1.0
texture = ExtResource("11_x60jw")
emission_shape = 3
emission_rect_extents = Vector2(50, 20)
direction = Vector2(0, -1)
spread = 90.0
initial_velocity_min = 2000.0
initial_velocity_max = 5000.0
angular_velocity_min = -500.0
angular_velocity_max = 500.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 0.05
scale_amount_max = 0.1
scale_amount_curve = SubResource("Curve_bc56w")

[node name="DarkStarParticle6" type="Sprite2D" parent="GameOver/StarCompletes"]
visible = false
position = Vector2(1480, 950)
rotation = 0.174533
scale = Vector2(0.2, 0.2)
texture = ExtResource("11_x60jw")

[node name="StarCPUParticles6" type="CPUParticles2D" parent="GameOver/StarCompletes/DarkStarParticle6"]
position = Vector2(12.5013, 49.9372)
emitting = false
amount = 15
one_shot = true
explosiveness = 1.0
texture = ExtResource("11_x60jw")
emission_shape = 3
emission_rect_extents = Vector2(50, 20)
direction = Vector2(0, -1)
spread = 90.0
initial_velocity_min = 2000.0
initial_velocity_max = 5000.0
angular_velocity_min = -500.0
angular_velocity_max = 500.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 0.05
scale_amount_max = 0.1
scale_amount_curve = SubResource("Curve_bc56w")

[node name="DarkStarParticle7" type="Sprite2D" parent="GameOver/StarCompletes"]
visible = false
position = Vector2(1730, 960)
rotation = 0.261799
scale = Vector2(0.2, 0.2)
texture = ExtResource("11_x60jw")

[node name="StarCPUParticles7" type="CPUParticles2D" parent="GameOver/StarCompletes/DarkStarParticle7"]
position = Vector2(12.5013, 49.9372)
emitting = false
amount = 15
one_shot = true
explosiveness = 1.0
texture = ExtResource("11_x60jw")
emission_shape = 3
emission_rect_extents = Vector2(50, 20)
direction = Vector2(0, -1)
spread = 90.0
initial_velocity_min = 2000.0
initial_velocity_max = 5000.0
angular_velocity_min = -500.0
angular_velocity_max = 500.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 0.05
scale_amount_max = 0.1
scale_amount_curve = SubResource("Curve_bc56w")

[node name="StarGhosts" type="Node2D" parent="GameOver"]
position = Vector2(-21, -10)

[node name="GhostStarParticle1" type="Sprite2D" parent="GameOver/StarGhosts"]
visible = false
position = Vector2(230, 960)
rotation = -0.261799
scale = Vector2(0.15, 0.15)
texture = ExtResource("12_m0jp0")

[node name="GhostStarParticle2" type="Sprite2D" parent="GameOver/StarGhosts"]
visible = false
position = Vector2(480, 950)
rotation = -0.174533
scale = Vector2(0.15, 0.15)
texture = ExtResource("12_m0jp0")

[node name="GhostStarParticle3" type="Sprite2D" parent="GameOver/StarGhosts"]
visible = false
position = Vector2(730, 945)
rotation = -0.0872665
scale = Vector2(0.15, 0.15)
texture = ExtResource("12_m0jp0")

[node name="GhostStarParticle4" type="Sprite2D" parent="GameOver/StarGhosts"]
visible = false
position = Vector2(980, 940)
scale = Vector2(0.15, 0.15)
texture = ExtResource("12_m0jp0")

[node name="GhostStarParticle5" type="Sprite2D" parent="GameOver/StarGhosts"]
visible = false
position = Vector2(1230, 945)
rotation = 0.0872665
scale = Vector2(0.15, 0.15)
texture = ExtResource("12_m0jp0")

[node name="GhostStarParticle6" type="Sprite2D" parent="GameOver/StarGhosts"]
visible = false
position = Vector2(1480, 950)
rotation = 0.174533
scale = Vector2(0.15, 0.15)
texture = ExtResource("12_m0jp0")

[node name="GhostStarParticle7" type="Sprite2D" parent="GameOver/StarGhosts"]
visible = false
position = Vector2(1730, 960)
rotation = 0.261799
scale = Vector2(0.15, 0.15)
texture = ExtResource("12_m0jp0")

[node name="Score" type="Label" parent="GameOver"]
z_index = 5
offset_left = -2.0
offset_top = 522.0
offset_right = 681.0
offset_bottom = 618.0
theme_override_colors/font_shadow_color = Color(0.466181, 0.466181, 0.466181, 1)
theme_override_constants/shadow_outline_size = 20
theme_override_font_sizes/font_size = 70
text = "SCORE: 0 PTS"
horizontal_alignment = 1

[node name="ScoreCPUParticles2D" type="CPUParticles2D" parent="GameOver/Score"]
position = Vector2(404, 47)
emitting = false
amount = 30
emission_shape = 3
emission_rect_extents = Vector2(50, 20)
direction = Vector2(0, -1)
spread = 90.0
initial_velocity_min = 200.0
initial_velocity_max = 500.0
scale_amount_min = 5.0
scale_amount_max = 10.0
scale_amount_curve = SubResource("Curve_bc56w")

[node name="Highscore" type="Label" parent="GameOver"]
z_index = 5
offset_left = -2.0
offset_top = 633.0
offset_right = 681.0
offset_bottom = 729.0
theme_override_colors/font_shadow_color = Color(0.466181, 0.466181, 0.466181, 1)
theme_override_constants/shadow_outline_size = 20
theme_override_font_sizes/font_size = 40
text = "HIGHSCORE: 0 PTS"
horizontal_alignment = 1

[node name="HighscoreCPUParticles2D" type="CPUParticles2D" parent="GameOver/Highscore"]
position = Vector2(404, 47)
emitting = false
amount = 15
one_shot = true
explosiveness = 1.0
texture = ExtResource("11_x60jw")
emission_shape = 3
emission_rect_extents = Vector2(50, 20)
direction = Vector2(0, -1)
spread = 90.0
initial_velocity_min = 200.0
initial_velocity_max = 500.0
angular_velocity_min = -500.0
angular_velocity_max = 500.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 0.05
scale_amount_max = 0.1
scale_amount_curve = SubResource("Curve_bc56w")

[node name="EarningPoints" type="AudioStreamPlayer" parent="GameOver"]
stream = ExtResource("13_8wiul")
script = ExtResource("14_nv7fv")

[node name="EarningTimer" type="Timer" parent="GameOver/EarningPoints"]
wait_time = 0.1

[node name="HighscoreAwarded" type="AudioStreamPlayer" parent="GameOver"]
stream = ExtResource("15_gejrj")
pitch_scale = 2.0
script = ExtResource("14_nv7fv")

[node name="StarSound1" type="AudioStreamPlayer" parent="GameOver"]
stream = ExtResource("16_0nk63")
volume_db = -20.0
pitch_scale = 0.8
script = ExtResource("14_nv7fv")
startingDB = -20.0

[node name="StarSound2" type="AudioStreamPlayer" parent="GameOver"]
stream = ExtResource("16_0nk63")
volume_db = -20.0
pitch_scale = 0.9
script = ExtResource("14_nv7fv")
startingDB = -20.0

[node name="StarSound3" type="AudioStreamPlayer" parent="GameOver"]
stream = ExtResource("16_0nk63")
volume_db = -20.0
script = ExtResource("14_nv7fv")
startingDB = -20.0

[node name="StarSound4" type="AudioStreamPlayer" parent="GameOver"]
stream = ExtResource("16_0nk63")
volume_db = -20.0
pitch_scale = 1.1
script = ExtResource("14_nv7fv")
startingDB = -20.0

[node name="StarSound5" type="AudioStreamPlayer" parent="GameOver"]
stream = ExtResource("16_0nk63")
volume_db = -20.0
pitch_scale = 1.2
script = ExtResource("14_nv7fv")
startingDB = -20.0

[node name="StarSound6" type="AudioStreamPlayer" parent="GameOver"]
stream = ExtResource("16_0nk63")
volume_db = -20.0
pitch_scale = 1.3
script = ExtResource("14_nv7fv")
startingDB = -20.0

[node name="StarSound7" type="AudioStreamPlayer" parent="GameOver"]
stream = ExtResource("16_0nk63")
volume_db = -20.0
pitch_scale = 1.4
script = ExtResource("14_nv7fv")
startingDB = -20.0

[node name="StageName" type="Label" parent="GameOver"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1250.0
offset_top = -135.0
offset_right = 14.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
text = "Learner Lagoon"
horizontal_alignment = 1

[node name="PauseMenu" parent="." instance=ExtResource("13_3wdue")]
visible = false
script = ExtResource("12_1ef7u")

[node name="HealthBarRed" parent="." instance=ExtResource("15_tvgir")]
z_index = 7
position = Vector2(0, 500)
scale = Vector2(0.5, 0.5)
texture = ExtResource("14_rfjs2")
script = ExtResource("15_1r5es")

[node name="PopSfxPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_j4gmb")

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2(0.3, 0.3)
zoom = Vector2(0.2, 0.2)
script = ExtResource("18_chv7v")

[node name="CrasherArea2D" type="Area2D" parent="." groups=["Crasher"]]
position = Vector2(-648.604, -10.6732)
script = ExtResource("19_6jffq")

[node name="Crasher" type="Sprite2D" parent="CrasherArea2D"]
z_index = 1
texture = ExtResource("20_slatg")

[node name="CPUParticles2D" type="CPUParticles2D" parent="CrasherArea2D/Crasher"]
position = Vector2(1.64204, 119.869)
emitting = false
amount = 12
fract_delta = false
emission_shape = 1
emission_sphere_radius = 30.74
direction = Vector2(0, 1)
spread = 14.09
gravity = Vector2(0, 0)
initial_velocity_min = 141.41
initial_velocity_max = 868.68
angle_min = -180.0
angle_max = 180.0
angle_curve = SubResource("Curve_p1bkv")
scale_amount_min = 61.61
scale_amount_max = 102.01
scale_amount_curve = SubResource("Curve_qkfoy")
color = Color(0.791999, 0.791999, 0.791999, 1)
color_ramp = SubResource("Gradient_y4ple")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CrasherArea2D"]
build_mode = 1
polygon = PackedVector2Array(-45.1558, 57.4713, -87.0278, 117.406, -87.0278, 64.0394, -136.289, 64.0394, 0, -128.9, 137.11, 64.0394, 87.0278, 64.0394, 87.8491, 117.406, 48.4399, 62.3974, 48.4399, 115.764, 41.0508, 121.511, 25.4517, 125.616, 0.820801, 127.258, -19.7046, 125.616, -32.0195, 123.153, -39.4087, 119.869, -45.1558, 114.122)

[node name="CrasherOutline" type="Sprite2D" parent="CrasherArea2D"]
material = SubResource("ShaderMaterial_ih00v")
position = Vector2(0, -3.28407)
rotation = -1.5708
scale = Vector2(1.1, 1.1)
texture = ExtResource("21_wb7rs")
script = ExtResource("22_i2wgh")

[node name="RadialBackground" type="Sprite2D" parent="."]
z_index = -10
scale = Vector2(3.7, 3.7)
texture = ExtResource("20_rltlv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Score" type="Label" parent="CanvasLayer"]
z_index = 5
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 28.0
offset_top = 918.0
offset_right = -1251.0
offset_bottom = -79.0
theme_override_colors/font_shadow_color = Color(0.466181, 0.466181, 0.466181, 1)
theme_override_constants/shadow_outline_size = 30
theme_override_font_sizes/font_size = 60
text = "SCORE: 0 PTS"
script = ExtResource("14_6ye3i")
metadata/_edit_use_anchors_ = true

[node name="Highscore" type="Label" parent="CanvasLayer"]
z_index = 5
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 26.0
offset_top = 1014.0
offset_right = -1236.0
offset_bottom = 3.0
theme_override_colors/font_shadow_color = Color(0.466181, 0.466181, 0.466181, 1)
theme_override_constants/shadow_outline_size = 20
theme_override_font_sizes/font_size = 40
text = "HIGHSCORE: 0 PTS"
script = ExtResource("15_nmvl1")
metadata/_edit_use_anchors_ = true

[node name="CrashBoost" type="Sprite2D" parent="CanvasLayer"]
z_index = 7
material = SubResource("ShaderMaterial_4yd7u")
position = Vector2(1880, 159)
rotation = 4.71238
scale = Vector2(0.3, 0.3)
texture = ExtResource("14_rfjs2")
script = ExtResource("27_b45ey")

[connection signal="timeout" from="GameBulletHandler/AutoTimer" to="GameBulletHandler" method="_on_auto_timer_timeout"]
[connection signal="area_entered" from="AreaBulletCollection" to="AreaBulletCollection" method="_on_area_entered"]
[connection signal="pressed" from="GameOver/RetryButton" to="GameOver" method="_on_retry_button_pressed"]
[connection signal="pressed" from="GameOver/StageButton" to="GameOver" method="_on_stage_button_pressed"]
[connection signal="timeout" from="GameOver/EarningPoints/EarningTimer" to="GameOver" method="_on_earning_timer_timeout"]
[connection signal="area_entered" from="CrasherArea2D" to="CrasherArea2D" method="_on_area_entered"]
